--- a/css/styles.css
+++ b/css/styles.css
@@ -292,11 +292,33 @@ li {
   background: #ffffff;
   border: 1px solid #eeeeee;
   margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  width: 370px;
+  height: 400px;
 }
 
 .portfoliobox:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.portfolio-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.portfolio-overlay-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+.portfoliobox:hover .portfolio-overlay:hover {
+  transform: translate(0%, -100%);
+  transition: 250ms cubic-bezier(0.4 0, 0.2, 1);
+  background: rgba(33, 150, 243, 0.9);
+  height: 100%;
 }
 
 .name {
@@ -524,22 +546,25 @@ ul {
 }
 .is-hidden {
   transform: scale(0);
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
 .modal {
+  position: absolute;
   width: 400px;
   height: 400px;
+  left: 600px;
+  right: 600px;
+  top: 25%;
   background-color: #ffffff;
-  margin: auto;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
 }
 .modal-btn {
+  position: absolute;
   cursor: pointer;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 5%;
+  right: 5%;
 }
