--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,7 @@ body {
 }
 .second-menu-icons {
   --color2: #757575;
+  align-items: stretch;
 }
 .second-menu-icons:hover {
   --color2: #2196f3;
@@ -169,8 +170,8 @@ a {
   font-size: 14px;
   line-height: 1.1428;
   letter-spacing: 0.02em;
-
   color: #757575;
+  align-items: center;
 }
 .telephone:hover {
   color: #2196f3;
@@ -306,6 +307,9 @@ li {
   position: absolute;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
+  transform: translateY(80%);
 }
 .portfolio-overlay-text {
   font-weight: 400;
@@ -313,14 +317,22 @@ li {
   line-height: 28px;
   letter-spacing: 0.03em;
   color: #ffffff;
+  text-align: justify;
+  padding: 10%;
+  overflow: hidden;
 }
 .portfoliobox:hover .portfolio-overlay:hover {
-  transform: translate(0%, -100%);
-  transition: 250ms cubic-bezier(0.4 0, 0.2, 1);
+  transform: translate(0);
+  transition: transform 250ms ease;
+  transform: cubic-bezier(0.4 0, 0.2, 1);
   background: rgba(33, 150, 243, 0.9);
   height: 100%;
 }
 
+.box {
+  overflow: hidden;
+  position: relative;
+}
 .name {
   padding-top: 30px;
   font-size: 16px;
