--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ body {
   text-align: center;
   color: #ffffff;
   cursor: pointer;
+  transition: 500ms;
 }
 .text:hover {
   background: #0a2f4d;
@@ -83,8 +84,6 @@ body {
 .email:hover {
   fill: #2196f3;
   cursor: pointer;
-
-  transition: 500ms;
 }
 .logo {
   width: 145px;
@@ -144,18 +143,18 @@ body {
   font-size: 14px;
   line-height: 1.1428;
   letter-spacing: 0.02em;
-
   color: #212121;
 }
 .contact:hover {
   color: #2196f3;
-  transition: 500ms;
+  
 }
 .email {
   font-size: 14px;
   line-height: 1.1428;
   letter-spacing: 0.02em;
   color: #757575;
+  transition: linear 500ms;
 }
 a:hover {
   color: #2196f3;
@@ -178,14 +177,13 @@ a {
   letter-spacing: 0.02em;
   color: #757575;
   align-items: center;
+  transition: 500ms;
 }
 .telephone:hover {
   color: #2196f3;
-  transition: 500ms;
 }
 .telephone:focus {
   color: #2196f3;
-  transition: 500ms;
 }
 .title2 {
   font-weight: 700;
@@ -280,6 +278,7 @@ li {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+  transition: 500ms;
 }
 
 .button:hover {
@@ -287,6 +286,7 @@ li {
   color: #ffffff;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+    
 }
 
 .button:focus {
