--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,9 @@ body {
   text-align: center;
   color: var(--white);
   cursor: pointer;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .text:hover {
   background: #0a2f4d;
@@ -87,10 +89,7 @@ body {
   fill: var(--blue);
   cursor: pointer;
 }
-.email:hover {
-  fill: var(--blue);
-  cursor: pointer;
-}
+
 .logo {
   width: 145px;
   margin: 24px 93px 25px 0;
@@ -154,27 +153,31 @@ body {
 .contact:hover {
   color: var(--blue);
 }
+a {
+  text-decoration: none;
+  color: var(--light-grey);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .email {
   font-size: 14px;
   line-height: 1.1428;
   letter-spacing: 0.02em;
   color: var(--light-grey);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.email:hover {
+  color: var(--blue);
+}
+.email:focus {
+  color: var(--blue);
 }
 a:hover {
   color: var(--blue);
-  fill: var(--blue);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 a:focus {
   color: var(--blue);
-  fill: var(--blue);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-a {
-  text-decoration: none;
-  color: var(--light-grey);
-}
+
 .telephone {
   text-decoration: none;
   font-size: 14px;
@@ -182,7 +185,8 @@ a {
   letter-spacing: 0.02em;
   color: var(--light-grey);
   align-items: center;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .telephone:hover {
   color: var(--blue);
@@ -284,7 +288,8 @@ li {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover {
@@ -334,12 +339,10 @@ li {
 }
 .portfoliobox:hover .portfolio-overlay {
   transform: translate(0);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: cubic-bezier(0.4 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background: rgba(33, 150, 243, 0.9);
   height: 100%;
 }
-
 .box {
   overflow: hidden;
   position: relative;
@@ -463,8 +466,6 @@ ul {
 }
 .social-links {
   box-sizing: content-box;
-  width: 206px;
-  height: 56px;
   display: flex;
   margin-inline-start: 32px;
   margin-inline-end: 32px;
@@ -483,7 +484,8 @@ ul {
   max-height: 44px;
   margin-inline: 5px;
   fill: var(--dark-white);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   align-items: left;
   border-radius: 50%;
 }
@@ -494,7 +496,9 @@ ul {
   border: 1px solid;
   border-color: var(--dark-white);
   border-radius: 4px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .figcaptionclients:hover {
   cursor: pointer;
@@ -513,12 +517,10 @@ ul {
 .pointer-in-list {
   background-color: var(--white);
   fill: var(--dark-white);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pointer-in-list:hover {
   cursor: pointer;
   fill: var(--blue);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-title {
   color: var(--white);
@@ -532,7 +534,8 @@ ul {
   background-color: rgba(255, 255, 255, 0.1);
   cursor: pointer;
   border-radius: 50%;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon:hover {
   fill: var(--white);
@@ -590,9 +593,9 @@ ul {
   width: 100%;
   height: 100%;
   background-color: rgba(0 0 0 / 0.5);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   visibility: initial;
   transform: scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
