--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,6 @@ a:focus {
   margin-bottom: 20px;
   letter-spacing: 0.03em;
   color: var(--white);
-  text-align: left;
 }
 .address {
   font-style: normal;
@@ -265,7 +264,6 @@ a:focus {
   line-height: 1.7142;
   letter-spacing: 0.03em;
   margin-bottom: 60px;
-  text-align: left;
   color: var(--white);
 }
 
@@ -469,7 +467,7 @@ ul {
   display: flex;
   margin-inline-start: 32px;
   margin-inline-end: 32px;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 .social-links svg:hover {
@@ -482,7 +480,6 @@ ul {
 .social-links-icons {
   max-width: 44px;
   max-height: 44px;
-  margin-inline: 5px;
   fill: var(--dark-white);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -526,6 +523,7 @@ ul {
   color: var(--white);
   display: flex;
   text-align: left;
+  font-size: 14px;
 }
 .social {
   fill: var(--white);
@@ -567,9 +565,8 @@ ul {
   color: var(--white);
 }
 .footer-container {
-  text-align: left;
-  margin-left: 215px;
   margin-right: 70px;
+  align-items: left;
 }
 .label {
   position: relative;
@@ -596,6 +593,8 @@ ul {
   visibility: initial;
   transform: scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  visibility: visible;
+  opacity: 1;
 }
 
 .is-hidden {
@@ -621,4 +620,12 @@ ul {
   border-radius: 50%;
   top: 5%;
   right: 5%;
+}
+.blockcontainer {
+  box-sizing: border-box;
+  display: flex;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
 }
