--- a/css/styles.css
+++ b/css/styles.css
@@ -323,7 +323,10 @@ li {
   height: 100%;
   top: 0;
   left: 0;
-  transform: translateY(80%);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background: rgba(33, 150, 243, 0.9);
+  height: 100%;
 }
 .portfolio-overlay-text {
   font-weight: 400;
@@ -592,9 +595,9 @@ ul {
   background-color: rgba(0 0 0 / 0.5);
   visibility: initial;
   transform: scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  visibility: visible;
-  opacity: 1;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
